Transition from Interaction Studio to Marketing Cloud Personalization name

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -10,7 +10,7 @@ image: img/og/og-image-docs-and-snippets.png
 import { LeadText } from '../src/components/LeadText.js';
 import { Button } from '../src/components/Buttons.js';
 
-<LeadText content="SSJS + JS + AMPScript + SQL + SFMC Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud." />
+<LeadText content="SSJS + JS + AMPScript + SQL + SFMC & MCP Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud." />
 
 ## Zen of SFMC
 
@@ -133,23 +133,24 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
     text='Read about SFMC Config'
 />
 
-## Interaction Studio
+## Marketing Cloud Personalization
 
-Interaction Studio (Salesforce Marketing Cloud Personalization) is a cross-channel real-time hyper-personalisation engine in Salesforce Marketing Cloud. Behind that cool-looking description is a powerful tool that lets your company adapt every point of contact to each person. Neat!
+Salesforce Marketing Cloud Personalization (Interaction Studio) is a cross-channel real-time hyper-personalisation engine in Salesforce Marketing Cloud. Behind that cool-looking description is a powerful tool that lets your company adapt every point of contact to each person. Neat!
 
-### Interaction Studio Documentation
+### MC Personalization Documentation
 
-- [Catalog Objects Architeture](./interaction-studio/is-catalog-architecture.mdx)
-- [Serverside Code in Campaign Templates](./interaction-studio/is-serverside-code-in-campaigns.mdx)
-- [Open Time Email Template](./interaction-studio/is-open-time-email.mdx)
+- [Catalog Objects Architeture](./interaction-studio/mcp-catalog-architecture.mdx)
+- [Open Time Email Template](./interaction-studio/mcp-open-time-email.mdx)
+- [Serverside Code Basics](./interaction-studio/mcp-serverside-code-basics.mdx)
+- [Serverside Code Properties](./interaction-studio/mcp-serverside-code-properties.mdx)
 
-### Interaction Studio Snippets
+### MC Personalization Snippets
 
-- [Catalog ETL Metadata Viewer](./interaction-studio/snippets/is-catalog-etl-metadata-viewer.mdx)
+- [Catalog ETL Metadata Viewer](./interaction-studio/snippets/mcp-catalog-etl-metadata-viewer.mdx)
 
 <Button
-    link='./category/interaction-studio/'
-    text='Read about Interaction Studio'
+    link='./category/mc-personalization/'
+    text='Read about MC Personalization'
 />
 
 ## Changes
