--- a/docs/interaction-studio/mcp-catalog-architecture.mdx
+++ b/docs/interaction-studio/mcp-catalog-architecture.mdx
@@ -1,20 +1,20 @@
 ---
-id: is-catalog-architecture
-title: IS Catalog Architecture
+id: mcp-catalog-architecture
+title: MCP Catalog Architecture
 sidebar_label: Catalog Architecture
-description: Interaction Studio (MC Personalization) Catalog Objects architecture, data ingestion, limitations, tricks and tips. Build right from the start.
-image: img/og/og-image-interaction-studio-catalog-architecture.png
-tags: [Interaction Studio, Personalisation, Setup, Data Management]
+description: Marketing Cloud Personalization (Interaction Studio) Catalog Objects architecture, data ingestion, limitations, tricks and tips. Build right from the start.
+image: img/og/og-image-mcp-catalog-architecture.png
+tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Setup, Data Management]
 toc_max_heading_level: 4
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content="Interaction Studio (SFMC Personalization) Catalog Objects architecture, data ingestion, limitations, tricks and tips. Build right from the start." />
+<LeadText content="Marketing Cloud Personalization (Interaction Studio) Catalog Objects architecture, data ingestion, limitations, tricks and tips. Build right from the start." />
 
 ## Catalog Basics & Limitations
 
-The purpose of the Interaction Studio Catalog is to store your asseet data along with interconnecting relationships for personalisation and machine learning purposes.
+The purpose of the Marketing Cloud Personalization (Interaction Studio) Catalog is to store your asseet data along with interconnecting relationships for personalisation and machine learning purposes.
 
 There are five out-of-the-box objects: Products, Articles, Blog Posts, Categories and Promotions. You can also create **up to 25 custom** Catalog Objects.
 
@@ -22,9 +22,9 @@ Each Object contains some built-in attributes (like Name, URL, Description, Prom
 
 All of the above can be stitched together using prebuilt and custom relationships between Catalog Objects (for example, the built-in relationship between a Product and a Category) - allowing for connections of **up to 15 Categories per Item** and **up to 50 related Catalog Object values per Item**.
 
-With **up to 2 000 000 Items per Catalog** and **up to 10 000 000 Items in total** across all Catalogs, Interaction Studio provides a lot of flexibility to architect a Catalog of your dreams.
+With **up to 2 000 000 Items per Catalog** and **up to 10 000 000 Items in total** across all Catalogs, MC Personalization provides a lot of flexibility to architect a Catalog of your dreams.
 
-However, some quirks and features require more consideration to make the most out of Marketing Cloud Personalization capabilities. Especially as some wrong moves can be tough to reverse. Let's dive in.
+However, some quirks and features require more consideration to make the most out of MCP capabilities. Especially as some wrong moves can be tough to reverse. Let's dive in.
 
 ## Catalog Data Sources
 
@@ -38,7 +38,7 @@ So which one should you use - Sitemap or ETL?
 
 ### Why not both?
 
-Mixing both sources is very tempting as it sounds like the best of both worlds. Unfortunately, it is not recommended approach due to Interaction Studio's backend limitations. Sending the same Items through both channels impacts performance, creates concurrency and can lead to incorrect and not-so-easy-to-fix issues with your Catalog.
+Mixing both sources is very tempting as it sounds like the best of both worlds. Unfortunately, it is not recommended approach due to MCP's backend limitations. Sending the same Items through both channels impacts performance, creates concurrency and can lead to incorrect and not-so-easy-to-fix issues with your Catalog.
 
 For example, if you control the Exclusion and Eligibility of the Products using Sitemap and the `promotable` attribute, the ETL won't be able to overwrite it (despite officially having higher priority as a data source). It can quickly lead to considerable discrepancies in Product availability for recommendations. Due to that, I recommend enabling Strict Catalog Security setting to protect your Catalog integrity if you are using ETL.
 
@@ -50,7 +50,7 @@ To sum up - do not mix Sitemap and ETL. And if you have to - do not mix Sitemap 
 
 Assuming you want to keep things clean, you have two options:
 
-#### 1. Interaction Studio with Sitemap
+#### 1. MC Personalization with Sitemap
 
 Pros:
 - You need Sitemap either way.
@@ -65,22 +65,22 @@ Cons:
 - Cannot overwrite Multistring Object attributes and relationships (like Category) - Sitemap can only append.
 - Catalog can be manipulated from the front end by malicious actors.
 
-#### 2. Interaction Studio with ETL
+#### 2. MC Personalization with ETL
 
 Pros:
 - Full Catalog upsert possible every 15 minutes (delta files recommended).
 - Full control over final Catalog values - regardless of Item page visits.
-- Better control over [history of value changes](./snippets/is-catalog-etl-metadata-viewer.mdx) and easier debugging.
+- Better control over [history of value changes](./snippets/mcp-catalog-etl-metadata-viewer.mdx) and easier debugging.
 - Much better performance, especially for bigger Catalogs.
 - More secure with Strict Catalog Security option <br/> **WARNING**: A bug currently stops Add To Cart and Purchase actions from being associated with Categories with this setting enabled.
 - Much more lean and performant Sitemap.
 
 Cons:
-- Require you to export data in a particularly formatted .csv to IS SFTP.
+- Require you to export data in a particularly formatted .csv to MCP SFTP.
 - Not real-time (but every 15 minutes is pretty damn close, come on!).
-- Doesn't support [drill-down Category hierarchy](../../../sites/ideas/interaction-studio-ideas#full-is--mcp-category-hierarchy-support-for-etl) in the UI<sup>[*](#category-catalog-unique-attributes)</sup>.
+- Doesn't support [drill-down Category hierarchy](../../../sites/ideas/mc-personalization-ideas#full-mcp-category-hierarchy-support-for-etl) in the UI<sup>[*](#category-catalog-unique-attributes)</sup>.
 
-### Recommended IS Catalog Data Source
+### Recommended MCP Catalog Data Source
 
 Considering the above, ETL seems like an obvious choice. And it nearly is. I see only two scenarios where we should choose Sitemap to populate the Catalog (spoiler alert, you should try to overcome those scenarios as much as possible):
 
@@ -88,19 +88,19 @@ Considering the above, ETL seems like an obvious choice. And it nearly is. I see
 
 For example, due to swift changes in the price based on demand. Or due to having single-stock items that need to be pulled quickly from the recommendations (unfortunately, Purchase action does not adjust the stock). Consider this only if it is crucial for your business. Otherwise, the 15-minute cadence with ETL is close and lets you benefit from all the good things.
 
-2. You cannot schedule a correctly prepared .csv file to Interaction Studio SFTP.
+2. You cannot schedule a correctly prepared .csv file to MC Personalization SFTP.
 
-In most cases, your systems already use flat files and FTPs for communication, and you can extend the architecture to cover Interaction Studio. If not, many tools can help you transform your data cleanly into a nice .csv and add it to Marketing Cloud Personalization Feed with the correct naming convention. You can even leverage Marketing Cloud's Automation Studio to prepare and deliver the files in the proper format! But sometimes data is just not there - and then, ETL is a no-go.
+In most cases, your systems already use flat files and FTPs for communication, and you can extend the architecture to cover MCP. If not, many tools can help you transform your data cleanly into a nice .csv and add it to Marketing Cloud Personalization Feed with the correct naming convention. You can even leverage Marketing Cloud's Automation Studio to prepare and deliver the files in the proper format! But sometimes data is just not there - and then, ETL is a no-go.
 
 While you can begin with Sitemap and then migrate to the ETL approach, the transitory period may be problematic due to issues described in the [Why not both?](#why-not-both) section above. I recommend finding a workaround and starting with the better option.
 
 ```mermaid
 graph TB
  source[(Catalog Data Source)]
- is[(Interaction Studio Catalog)]:::success
+ mcp[(MCP Catalog)]:::success
  isRealTimeNeeded{{Do you need real-time updates?}}:::check
  isEtlTooSlow{{Is update every 15 minutes really too slow?}}:::check
- canPrepareFile{{Can you schedule a .csv export to IS SFTP?}}:::check
+ canPrepareFile{{Can you schedule a .csv export to MCP SFTP?}}:::check
  etl[Use ETL]:::process
  sitemap[Use Sitemap]:::process
 
@@ -111,15 +111,15 @@ graph TB
  isEtlTooSlow -->|Yes| sitemap
  canPrepareFile -->|No| sitemap
  canPrepareFile -->|Yes| etl
- sitemap --> is
- etl --> is
+ sitemap --> mcp
+ etl --> mcp
 
  classDef success fill:#1d73c9,color:#ffffff
  classDef check fill:#f6b355,color:#ffffff
  classDef process fill:#333333,color:#ffffff
 ```
 
-Once you know how to populate the Interaction Studio Catalog, it's time to decide what you will be filling in.
+Once you know how to populate the MC Personalization Catalog, it's time to decide what you will be filling in.
 
 ## Catalog Attributes
 
@@ -160,8 +160,8 @@ Location-based Attributes are niche but powerful. They are utterly useless for m
 
 Attribute | Data Type | Purpose | Comment
 -- | -- | -- | --
-Published | Datetime | Availability start date for an Item | Must be `null` or in the past for Interaction Studio to recommend the Item. If you set a future date - The Item will not be promoted until then.
-Expiration | Datetime | Availability end date for an Item | Must be `null` or in the future for Interaction Studio to recommend the Item. Once you hit that date, the Item stops being recommended.
+Published | Datetime | Availability start date for an Item | Must be `null` or in the past for MC Personalization to recommend the Item. If you set a future date - The Item will not be promoted until then.
+Expiration | Datetime | Availability end date for an Item | Must be `null` or in the future for MC Personalization to recommend the Item. Once you hit that date, the Item stops being recommended.
 Promotable | Picklist | Marks whether Item should be Promoted | Items can be either Eligible or Excluded. Only Eligible ones will be returned in the recommendations, regardless of Published/Expiration values.
 Archived | Boolean | Marks whether Item should be Archived | Archived Items are treated as Excluded (won't be recommended) and are hidden from the Catalog UI.
 
@@ -169,22 +169,22 @@ Archived | Boolean | Marks whether Item should be Archived | Archived Items are 
 
 Published and Expiration fields (as all Interacton Studio date type fields) use ISO-8601 datetime formar. You must pass them as `2022-04-12T10:23:37Z`.
 
-If you want to push a datetime to Interaction Studio using [ETL](#2-interaction-studio-with-etl), you can prepare the data with SQL using clean [FORMAT](../sql/sfmc-sql-date-functions.mdx#format-with-dates): `FORMAT(YourDateField,'yyyy-MM-ddTHH:mm:ssZ')` and output it to a String field type (Text, if we are talking SFMC Data Extension).
+If you want to push a datetime to MCP using [ETL](#2-mc-personalization-with-etl), you can prepare the data with SQL using clean [FORMAT](../sql/sfmc-sql-date-functions.mdx#format-with-dates): `FORMAT(YourDateField,'yyyy-MM-ddTHH:mm:ssZ')` and output it to a String field type (Text, if we are talking SFMC Data Extension).
 
 :::
 
-Promotion-related attributes are crucial for controlling what Interaction Studio will recommend. They are also the most tricky ones, as they seem to be very similar to each other. Rule of thumb when selecting what to use:
+Promotion-related attributes are crucial for controlling what MC Personalization will recommend. They are also the most tricky ones, as they seem to be very similar to each other. Rule of thumb when selecting what to use:
 
-1. If you are frequently updating the Catalog (thanks to using [ETL](#2-interaction-studio-with-etl)), go with the Promotable attribute.
-2. If you have less control over when the update will come (due to using [Sitemap](#1-interaction-studio-with-sitemap)), or need the recommendation to start/end at a particular time that is not perfectly aligned with your sync schedule, go with Published/Expiration attributes.
+1. If you are frequently updating the Catalog (thanks to using [ETL](#2-mc-personalization-with-etl)), go with the Promotable attribute.
+2. If you have less control over when the update will come (due to using [Sitemap](#1-mc-personalization-with-sitemap)), or need the recommendation to start/end at a particular time that is not perfectly aligned with your sync schedule, go with Published/Expiration attributes.
 3. If you are sure you don't need an Item, archive it. But it is a last resort solution for incorrect data, not a general tool for managing Catalog content.
 
 :::note You Should Know
 
-Archiving does not delete Items (there is no such option in Interaction Studio). It only hides them from the Catalog UI while preserving all its values. It has two significant ramifications:
+Archiving does not delete Items (there is no such option in MC Personalization). It only hides them from the Catalog UI while preserving all its values. It has two significant ramifications:
 
-1. Interaction Studio still uses archived Items for the personalisation engine - especially as anchors for recommendations. For example, a campaign promoting Similar Items to the Item currently viewed will work on the archvied Item page (and leverage all its metadata). If you want to avoid it, clean all attributes and relationships before archiving.
-2. You can't easily find archived items to make any changes or unarchive them. Find partial workarounds in the [Tips & Tricks section](#view-archived-items-in-the-is-catalog).
+1. Marketing Cloud Personalization still uses archived Items for the personalisation engine - especially as anchors for recommendations. For example, a campaign promoting Similar Items to the Item currently viewed will work on the archvied Item page (and leverage all its metadata). If you want to avoid it, clean all attributes and relationships before archiving.
+2. You can't easily find archived items to make any changes or unarchive them. Find partial workarounds in the [Tips & Tricks section](#view-archived-items-in-the-mcp-catalog).
 
 :::
 
@@ -195,7 +195,7 @@ Attribute | Data Type | Purpose | Comment
 Units in Stock | Integer | Provides products Inventory Count | If the Product is available, but the exact stock is unknown, provide 1. Otherwise, it will not get recommended.
 Alternate ID | Multistring | Pipe-separated SKUs for the Product | As there is no option to provide separate details for each SKU, it's pretty useless now.
 Price | Decimal | Current price of the product | Used for personalization and Einstein Recipe price-based filtering. A price equal to 0 will block the Product from recommendations.
-List Price | Decimal | Full sticker price of the product | Useful for price drop personalization and Product Price Reduction Triggered Campaigns. Unfortunately, there is no Price Reduction Recipe [yet](../../../sites/ideas/interaction-studio-ideas#price-reduction-ingredient-in-einstein-recipes).
+List Price | Decimal | Full sticker price of the product | Useful for price drop personalization and Product Price Reduction Triggered Campaigns. Unfortunately, there is no Price Reduction Recipe [yet](../../../sites/ideas/mc-personalization-ideas#price-reduction-ingredient-in-einstein-recipes).
 Price Description | String | Information about the current Price | You can pass here the promotion name that resulted in a lower Price for personalisation purposes.
 Currency | String | ISO-4217 Currency Code | Required when you enable Product Localization and capture Product price in multiple currencies. To pass Currency, you need to pass it along with Locale.
 Margin | Decimal | Profit margin on the Product | Useless.
@@ -217,10 +217,10 @@ Attribute | Data Type | Purpose | Comment
 ID Path | Multistring | Stores Category hierarchy information | Each Category can have only one Parent Category, and the root (top-level) Category should have this field empty.
 Is Department | Boolean | Marks root (top-level) Category | Used in Einstein Recipes for Department-based configurations.
 
-Dedicated Category Catalog attributes focus on the hierarchical relationship between the Categories. This area is a bit of a mess in the Interaction Studio because it works differently depending on whether you use [ETL](#2-interaction-studio-with-etl) or [Sitemap](#1-interaction-studio-with-sitemap).
+Dedicated Category Catalog attributes focus on the hierarchical relationship between the Categories. This area is a bit of a mess in the MC Personalization because it works differently depending on whether you use [ETL](#2-mc-personalization-with-etl) or [Sitemap](#1-mc-personalization-with-sitemap).
 
 1. **Sitemap-based hierarchy** is using the [basic ID attribute](#basic-catalog-attributes). It expects pipe-delimited IDs providing a full hierarchy path, so `Electronics` (single ID) for root Category, `Electronics|Computers` (two IDs pipe-delimited) for first-level child Category and so on for further levels (it can get quite long for deeper structures: `Electronics|Computers|Laptops|Ultrabooks`). It will unlock the visual hierarchy with tracking data rollups in the Category Catalog UI.
-2. **ETL-based hierarchy** uses the ID Path and Is Department attributes unique to Category Catalog. Each Category has a single ID, passes a single Parent ID (if it has a parent) or Is Department as True (if it doesn't have a parent) and based on the above, Interaction Studio generates the ID Path. It's cleaner, but it won't provide the nice visual hierarchy with tracking data rollups in the Category Catalog UI as the Sitemap option offers. I created an [Idea to fix that](../../../sites/ideas/interaction-studio-ideas#full-is--mcp-category-hierarchy-support-for-etl).
+2. **ETL-based hierarchy** uses the ID Path and Is Department attributes unique to Category Catalog. Each Category has a single ID, passes a single Parent ID (if it has a parent) or Is Department as True (if it doesn't have a parent) and based on the above, MCP generates the ID Path. It's cleaner, but it won't provide the nice visual hierarchy with tracking data rollups in the Category Catalog UI as the Sitemap option offers. I created an [Idea to fix that](../../../sites/ideas/mc-personalization-ideas#full-mcp-category-hierarchy-support-for-etl).
 
 :::note You Should Know
 
@@ -246,7 +246,7 @@ Let's start with the basics. You can create (up to 25) custom Catalog Objects th
 
 :::note You Should Know
 
-Depending on where you look in the Interaction Studio, you might still see "Dimensions" - an old name for related Catalog Objects.
+Depending on where you look in the Marketing Cloud Personalization, you might still see "Dimensions" - an old name for related Catalog Objects.
 
 :::
 
@@ -260,7 +260,7 @@ This set of features makes custom Catalog Objects a big deal when you want absol
 
 ### Promotions Related Catalog Object
 
-You want to recommend only the products that are on promotion. Create a custom Catalog Object "Promotions" with an Item "Promoted" and assign it (via [ETL](#2-interaction-studio-with-etl) or [Sitemap](#1-interaction-studio-with-sitemap)) to each deserving Product. Then you can use this information in Einstein Recipes » Exclusion tab to Include the "Promotions" Catalog and select "Promoted" using "from explicit selection" option.
+You want to recommend only the products that are on promotion. Create a custom Catalog Object "Promotions" with an Item "Promoted" and assign it (via [ETL](#2-mc-personalization-with-etl) or [Sitemap](#1-mc-personalization-with-sitemap)) to each deserving Product. Then you can use this information in Einstein Recipes » Exclusion tab to Include the "Promotions" Catalog and select "Promoted" using "from explicit selection" option.
 
 You can even go a step further and create additional Items in that Catalog like "0-10%", "11-20%", "21-30%", etc., to be able to include (or prioritize in the Serverside Code of the template) more significant promotions.
 
@@ -282,17 +282,17 @@ Another excellent use case for custom Catalog Objects is related to the Affinity
 
 Thankfully, there is a (dirty) way to change it. You won't be able to swap Category (and that's fine, as it is a must-have one, in my opinion), but the other three are yours to take.
 
-To make them whatever you want, create a custom Catalog Object with a special ID: Style, Brand or ItemClass. Use one of those and put what you want in the Name. Once you save it, Interaction Studio will show the Name and selected Items in the Affinity Wheel.
+To make them whatever you want, create a custom Catalog Object with a special ID: Style, Brand or ItemClass. Use one of those and put what you want in the Name. Once you save it, MC Personalization will show the Name and selected Items in the Affinity Wheel.
 
-Unfortunately, you will have to use those hardcoded IDs for populating data via [ETL](#2-interaction-studio-with-etl) or [Sitemap](#1-interaction-studio-with-sitemap). Not perfect, but it still makes your Affinity Wheel nice and valuable.
+Unfortunately, you will have to use those hardcoded IDs for populating data via [ETL](#2-mc-personalization-with-etl) or [Sitemap](#1-mc-personalization-with-sitemap). Not perfect, but it still makes your Affinity Wheel nice and valuable.
 
 ## Catalog Tips & Tricks
 
-There are some gotchas you can encounter when working with Interaction Studio Catalog. Here I gathered solutions to frequent problems and some undocumented tricks that can make your life easier.
+There are some gotchas you can encounter when working with MCP Catalog. Here I gathered solutions to frequent problems and some undocumented tricks that can make your life easier.
 
-### When IS recommends an Item?
+### When MCP recommends an Item?
 
-Understanding when Interaction Studio decides to recommend an Item might not be that easy, as there are quite a lot of rules checked in the backend:
+Understanding when MC Personalization decides to recommend an Item might not be that easy, as there are quite a lot of rules checked in the backend:
 
 1. Four conditions related to special [Promotion attributes](#promotion-settings-catalog-attributes):
     - Item cannot be Archived
@@ -352,31 +352,31 @@ graph TB
  classDef check fill:#f6b355,color:#ffffff
 ```
 
-### Items missing in IS Catalog
+### Items missing in MCP Catalog
 
 If you cannot find an Item in the Catalog UI, there are three possible options:
 
-1. **The Item is not in the Catalog** - Check .csv files on the SFTP if you are using [ETL](#2-interaction-studio-with-etl) or use Visual Editor to validate whether the Item is captured by the [Sitemap](#1-interaction-studio-with-sitemap).
+1. **The Item is not in the Catalog** - Check .csv files on the SFTP if you are using [ETL](#2-mc-personalization-with-etl) or use Visual Editor to validate whether the Item is captured by the [Sitemap](#1-mc-personalization-with-sitemap).
 2. **The Item does not have any item actions** - The catalog only shows items that have been viewied, added to cart or purchased.
-3. **The Item is filtered out with Date Picker** - Interaction Studio displays an Item in the Catalog only if there was any Item Action (View, Add to Cart or Purchase) in that time range selected in the Date Picker. You can extend it to up to 5 years to see more Items. Alternatively, use [my viewer script](./snippets/is-catalog-etl-metadata-viewer.mdx) that shows all non-archived Items.
-4. **The Item is archived** - Catalog does not display archived Items. Check out possible workarounds [here](#view-archived-items-in-the-is-catalog).
+3. **The Item is filtered out with Date Picker** - MC Personalization displays an Item in the Catalog only if there was any Item Action (View, Add to Cart or Purchase) in that time range selected in the Date Picker. You can extend it to up to 5 years to see more Items. Alternatively, use [my viewer script](./snippets/mcp-catalog-etl-metadata-viewer.mdx) that shows all non-archived Items.
+4. **The Item is archived** - Catalog does not display archived Items. Check out possible workarounds [here](#view-archived-items-in-the-mcp-catalog).
 
-### Data is not added to IS Catalog
+### Data is not added to MCP Catalog
 
-If Items are not [missing in the Interaction Studio Catalog](#items-missing-in-is-catalog), but you don't see the data you expect, there are three options:
+If Items are not [missing in the MCP Catalog](#items-missing-in-mcp-catalog), but you don't see the data you expect, there are three options:
 
-1. **You have Strict Catalog Security enabled** - In Interaction Studio » Settings » Catalog and Profile Objects » Catalog Settings » Security section » Strict Catalog Security option. If it is checked and you use Sitemap, only the Item ID will be added to the Catalog. It is a security feature that protects the integrity of your data, but you should use it only if you are using [ETL](#2-interaction-studio-with-etl) to populate the Catalog metadata. You should uncheck if you use [Sitemap](#1-interaction-studio-with-sitemap) to build Catalog.
-2. **You send item localization with the Catalog Localization switched off** - In Interaction Studio » Settings » Catalog and Profile Objects » Catalog Settings » Locale section » Localization of Catalog Metadata Based on Page Locale option. If it is unchecked, but you push locale along with Item data, it will be ignored by Interaction Studio. Either remove the locale information or enable that option.
+1. **You have Strict Catalog Security enabled** - In Personalization » Settings » Catalog and Profile Objects » Catalog Settings » Security section » Strict Catalog Security option. If it is checked and you use Sitemap, only the Item ID will be added to the Catalog. It is a security feature that protects the integrity of your data, but you should use it only if you are using [ETL](#2-mc-personalization-with-etl) to populate the Catalog metadata. You should uncheck if you use [Sitemap](#1-mc-personalization-with-sitemap) to build Catalog.
+2. **You send item localization with the Catalog Localization switched off** - In Personalization » Settings » Catalog and Profile Objects » Catalog Settings » Locale section » Localization of Catalog Metadata Based on Page Locale option. If it is unchecked, but you push locale along with Item data, it will be ignored by MCP. Either remove the locale information or enable that option.
 3. **You have a bug in the Sitemap** - Use Visual Editor from the Salesforce Interactions browser extension and execute Sitemap in it on the Item page. Check the left pane to see if the data is populated there. If not - you must fix the JavaScript that captures that data from the website.
 4. **You have another bug in the Sitemap** - If Visual Editor shows all the data, but you still don't have it on most Items, the most probable reason is an issue with timing. Depending on how you capture Item metadata, some might not be available when the Sitemap executes on page load (but is ready when you launch the browser extension). Add a `console.log` to see whether the data is ready when needed, and leverage JS promises to solve the issue.
 
-### Export full IS Catalog data
+### Export full MCP Catalog data
 
-Officially, the only option to export your Catalog data is to open the Catalog listing in the Interaction Studio UI and click the Export button in the top right. Sounds easy, but there are three big problems with it:
+Officially, the only option to export your Catalog data is to open the Catalog listing in the MC Personalization UI and click the Export button in the top right. Sounds easy, but there are three big problems with it:
 
 1. **You have limited control over what it will export** - The export file returns ID, Name, Views, ViewTime, AverageViewSeconds and URL. The Product Catalog will also contain Cart, Purchase, Revenue, Price, Categories, and all related Catalog Objects (each as concatenated IDs without any delimiter...). Och and you cannot Export Categories at all. No way to get any additional details like other attributes (especially the key ones like Inventory Stock, Promotion State, Archived, etc.).
 2. **You might not be able to export all Items** - The export file will contain only the Items in the current Catalog view. It means that the Date Picker in the top right impact the scope of returned Items. Date Picker has a limited range possible, so you might need to do multiple exports and deduplicate outcomes in the future. Items that do not yet have any action (view, cart or purchase) will also not be visible.
-3. **You cannot export archived Items** - Export contains only visible Items - and archived ones are hidden. So no luck. I discuss partial workarounds [here](#view-archived-items-in-the-is-catalog).
+3. **You cannot export archived Items** - Export contains only visible Items - and archived ones are hidden. So no luck. I discuss partial workarounds [here](#view-archived-items-in-the-mcp-catalog).
 
 Ok, you know all the limitations. What now?
 
@@ -392,17 +392,17 @@ id,categories,attribute:name,attribute:url,attribute:imageUrl,attribute:descript
 fullDataPlease,,,,,,,,,,,,,,,,,,,,,
 ```
 
-2. Upload that file to the testing folder on the Interaction Studio SFTP
-3. In Interaction Studio UI, go to Feeds » Feeds Dashboard » Select the right ETL (all custom Catalog Objects are using CatalogObjectETL) and click Validate or Execute button at the top.
+2. Upload that file to the testing folder on the Marketing Cloud Personalization SFTP
+3. In MC Personalization UI, go to Feeds » Feeds Dashboard » Select the right ETL (all custom Catalog Objects are using CatalogObjectETL) and click Validate or Execute button at the top.
 4. Click Select File » Double click the Testing folder » Select your .csv file. In the File Data section, you should see all the columns you have passed and all the items with only the ID column filled in.
 5. Click Run Test in the bottom left and wait for it to complete. It might take some time for bigger loads. Do **NOT** click the Commit button once it is ready.
 6. Click the Export `{Something}` button in the bottom right - the download will start for the stagedObjects file.
 7. Open it, and you will see three key row types: labels in the first row and then rows starting with either Original or Change value. You don't need any of the Change ones. Filter them out with the tool of your choice. I like to do it in VSCode with `^Change.*(\n|)` regex replacement to nothing.
-8. Here you have it; the full Interaction Studio Catalog exported to a .csv file. Two notes: fields you pushed with the `relatedCatalogObject` prefix will return with the `dimensions` prefix, and Multistring fields will return as Arrays instead of being pipe-delimited.
+8. Here you have it; the full MCP Catalog exported to a .csv file. Two notes: fields you pushed with the `relatedCatalogObject` prefix will return with the `dimensions` prefix, and Multistring fields will return as Arrays instead of being pipe-delimited.
 
-That's dirty, but there is currently no other option for that. I created an [Idea to change that](../../../sites/ideas/interaction-studio-ideas#full-is--mcp-catalog-export).
+That's dirty, but there is currently no other option for that. I created an [Idea to change that](../../../sites/ideas/mc-personalization-ideas#full-mcp-catalog-export).
 
-### View archived Items in the IS Catalog
+### View archived Items in the MCP Catalog
 
 [Archiving hides Items](#promotion-settings-catalog-attributes), making viewing them hard. They won't be visible in the Catalog UI or exported when you click the Export button. Salesforce Support won't be able to provide .csv with them.
 
@@ -412,6 +412,6 @@ There are, however, two ways to do it:
     - Option A: Go to the same Catalog as the Archived Item » Click any Item » Click the Edit button on the right pane » In the URL, find `&itemid=123456` and replace the value after the equal sign with the ID of the archived item » Click Enter. A
     - Option B: Open any Recipe » Simulate it » Find the archived Item in the Anchor Item picklist (because archived items still work as anchors) » Click the Book icon on the right side of the picklist.
 2. **All-at-Once** - Great when you know all possible Item IDs and need to find which are archived:
-    - Perform [Full IS Catalog data export](#export-full-is-catalog-data) using full list of IDs from your source system. It will return the archived status for each one. Then you can leverage it for mass update with reupload via [ETL](#2-interaction-studio-with-etl).
+    - Perform [Full MCP Catalog data export](#export-full-mcp-catalog-data) using full list of IDs from your source system. It will return the archived status for each one. Then you can leverage it for mass update with reupload via [ETL](#2-mc-personalization-with-etl).
 
-As you can see, in both cases, you need to know the IDs (either exact or all possible). If you don't know what IDs could have been archived because there is no backup of all possible options - you are out of luck. Currently, there is no option to view such Items. I created an [Idea to change that](../../../sites/ideas/interaction-studio-ideas#full-is--mcp-catalog-export).
+As you can see, in both cases, you need to know the IDs (either exact or all possible). If you don't know what IDs could have been archived because there is no backup of all possible options - you are out of luck. Currently, there is no option to view such Items. I created an [Idea to change that](../../../sites/ideas/mc-personalization-ideas#full-mcp-catalog-export).
