--- a/sites/ideas/marketing-cloud-ideas.mdx
+++ b/sites/ideas/marketing-cloud-ideas.mdx
@@ -4,6 +4,7 @@ title: Marketing Cloud Ideas
 sidebar_label: Marketing Cloud
 description: Here you can find all my Salesforce Marketing Cloud IdeaExchange contributions. Let's make the change!
 image: img/og/og-image-marketing-cloud-ideas.png
+tags: [Marketing Cloud]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
