--- a/sites/ideas/mc-personalization-ideas.mdx
+++ b/sites/ideas/mc-personalization-ideas.mdx
@@ -1,34 +1,35 @@
 ---
-id: interaction-studio-ideas
-title: Interaction Studio Ideas
-sidebar_label: Interaction Studio
-description: Here you can find all my Interaction Studio (SFMC Personalisation) IdeaExchange contributions. Let's make the change!
-image: img/og/og-image-interaction-studio-ideas.png
+id: mc-personalization-ideas
+title: MC Personalization Ideas
+sidebar_label: MC Personalization
+description: Here you can find all my Marketing Cloud Personalisation (Interaction Studio) IdeaExchange contributions. Let's make the change!
+image: img/og/og-image-mcp-ideas.png
+tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 import { Button } from '../../src/components/Buttons.js';
 
-<LeadText content="Here you can find all my Interaction Studio (SFMC Personalisation) IdeaExchange contributions. Let's make the change!" />
+<LeadText content="Here you can find all my Marketing Cloud Personalisation (Interaction Studio) IdeaExchange contributions. Let's make the change!" />
 
 
 ## Catalog
 
-### Full IS / MCP Category hierarchy support for ETL
+### Full MCP Category hierarchy support for ETL
 
-IS can create a working hierarchy tree of categories with a clean subcategory drill-down view in catalog UI and automatic summing of the views and revenue from the lowest level category up in the hierarchy.
+Marketing Cloud Personalization can create a working hierarchy tree of categories with a clean subcategory drill-down view in catalog UI and automatic summing of the views and revenue from the lowest level category up in the hierarchy.
 
 However, this is now possible only under multiple conditions: just one Category per product (for the attribution to work), a specific format of the category ID, and only through Sitemap.
 
 Especially problematic is that last limitation because, in many cases, ETL is the better way to manage it - especially with the format required for that feature.
 
-Category ETL already has a solution that provides the same level of detail to Interaction Studio using two out-of-the-box attributes: department and parentCategoryId.
+Category ETL already has a solution that provides the same level of detail to Marketing Cloud Personalization (Interaction Studio) using two out-of-the-box attributes: department and parentCategoryId.
 
-Interaction Studio displays the hierarchy built with those fields on the specific Category page under the ID. Unfortunately, it is not replicating the drill-down hierarchy tree UI in the Category list view and does not pass the data from the bottom Category up the hierarchy.
+MCP displays the hierarchy built with those fields on the specific Category page under the ID. Unfortunately, it is not replicating the drill-down hierarchy tree UI in the Category list view and does not pass the data from the bottom Category up the hierarchy.
 
 It should change - there should be a feature parity between Sitemap and ETL for such an important feature. Especially considering that all information required for it is already available.
 
-Read about risky workaround [here](../../../docs/interaction-studio/is-catalog-architecture/#category-catalog-unique-attributes).
+Read about risky workaround [here](../../../docs/interaction-studio/mcp-catalog-architecture/#category-catalog-unique-attributes).
 
 <Button
     link='https://ideas.salesforce.com/s/idea/a0B8W00000MMZ27UAH/full-category-hierarchy-support-for-etl-in-interaction-studio'
@@ -36,19 +37,19 @@ Read about risky workaround [here](../../../docs/interaction-studio/is-catalog-a
     newTab='true'
 />
 
-### Full IS / MCP Catalog Export
+### Full MCP Catalog Export
 
-Interaction Studio (Personalization) already supports Catalog manual export through the Export button on the Catalog listing. However, it exports products only with the limited data set available in the listing view.
+Marketing Cloud Personalization (Interaction Studio) already supports Catalog manual export through the Export button on the Catalog listing. However, it exports products only with the limited data set available in the listing view.
 
 The problem with the current state is that the exported file does not contain complete catalog data (like promotable and archived attributes) and cannot be used as an ETL source.
 
-It is a huge issue because it makes it impossible to debug catalog item states outside of IS/MCP (and doing it directly in the platform is not scalable). It also makes it impossible to batch-modify items (for example, for selective archiving or exclusion) for subsequent ETL import.
+It is a huge issue because it makes it impossible to debug catalog item states outside of MCP (and doing it directly in the platform is not scalable). It also makes it impossible to batch-modify items (for example, for selective archiving or exclusion) for subsequent ETL import.
 
 There should be an option to export the catalog in full scope, matching the ETL schema, including hidden Items that didn't yet get any action (view, cart, purchase).
 
 Bonus points for an option to include (or not) archived Items in the export. It would be a hugely beneficial addition for debugging purposes and Item reintroduction requirements (for example after mistake in archiving).
 
-Read about partial workaround [here](../../../docs/interaction-studio/is-catalog-architecture/#export-full-is-catalog-data).
+Read about partial workaround [here](../../../docs/interaction-studio/mcp-catalog-architecture/#export-full-is-catalog-data).
 
 <Button
     link='https://ideas.salesforce.com/s/idea/a0B8W00000NVRj3UAH/full-is-mcp-catalog-export'
@@ -56,11 +57,11 @@ Read about partial workaround [here](../../../docs/interaction-studio/is-catalog
     newTab='true'
 />
 
-### Full IS / MCP Catalog Metadata visibility
+### Full MCP Catalog Metadata visibility
 
-Interaction Studio (Personalization) already supports Catalog Object custom attribute metadata view (open Item in the Catalog and hover over custom attribute value to see the details). However, it is limited only to those custom attributes if the ETL updates them.
+Marketing Cloud Personalization (Interaction Studio) already supports Catalog Object custom attribute metadata view (open Item in the Catalog and hover over custom attribute value to see the details). However, it is limited only to those custom attributes if the ETL updates them.
 
-We can slightly extend it with a custom [Metadata Viewer solution](../../../docs/interaction-studio/snippets/is-catalog-etl-metadata-viewer/) to show that data also for built-in attributes. However, it is still a very limited solution due to product gaps:
+We can slightly extend it with a custom [Metadata Viewer solution](../../../docs/interaction-studio/snippets/mcp-catalog-etl-metadata-viewer/) to show that data also for built-in attributes. However, it is still a very limited solution due to product gaps:
 
 1. `origin` and `lastUpdated` values for Sources other than ETL (Sitemap, Mobile App, Manual update in UI, API)
 2. Showing this information for built-in attributes in the Catalog UI
@@ -123,9 +124,9 @@ Triggered Campaigns added a great option of targetting various events for Journe
 
 However, currently, there is no Ingredient for a popular e-commerce use case - Price Reduction.
 
-Interaction Studio has all the required information (the price and listPrice attributes used for the Triggered Campaign).
+Marketing Cloud Personalization (Interaction Studio) has all the required information (the price and listPrice attributes used for the Triggered Campaign).
 
-There is a workaround to make it possible now - calculating whether product price has been reduced externally and passing this information to a Related Catalog Object. However, there are better solutions for something that Interaction Studio is already doing out-of-the-box for another channel.
+There is a workaround to make it possible now - calculating whether product price has been reduced externally and passing this information to a Related Catalog Object. However, there are better solutions for something that MCP is already doing out-of-the-box for another channel.
 
 There are two possible solutions to this:
 
@@ -142,7 +143,7 @@ The solution can further improve it by adding a Recipe Booster on the price redu
 
 ### Rating Count in Recipe's Rating Exclusion
 
-Interaction Studio (MCP) offers many Exclusions/Inclusions on Recipes that allow to hone the recommendations to the exact business needs. Among them there is Rating that allows to exclude/include items based on their rating (with an optional zero rating capture).
+Marketing Cloud Personalization (Interaction Studio) offers many Exclusions/Inclusions on Recipes that allow to hone the recommendations to the exact business needs. Among them there is Rating that allows to exclude/include items based on their rating (with an optional zero rating capture).
 
 It would be great to have additional option in the same exclusion/inclusion to decide on rating count being greater than, less then or between two values. It should be easy, as the rating count is already part of the data model just like rating itself.
 
@@ -162,11 +163,11 @@ Currently such filters can be applied only on the Serverside Code level in the T
 
 ### Abandoned Cart Retention setting
 
-Interaction Studio (MCP) captures the cart information and makes it available for Einstein Recipes recommendation generation & context object in Campaign Template Server-Side Code. Unfortunately, we can only manage the cart content through proactive actions. If a client adds something to the cart and doesn't visit it for long periods, their cart content will remain in the IS.
+Marketing Cloud Personalization (Interaction Studio) captures the cart information and makes it available for Einstein Recipes recommendation generation & context object in Campaign Template Server-Side Code. Unfortunately, we can only manage the cart content through proactive actions. If a client adds something to the cart and doesn't visit it for long periods, their cart content will remain in the MCP.
 
 Currently, a dirty workaround for that is a Web Campaign launching on the first visit in the session using the context.user object to check whether the user has a cart and its age. Depending on that, it can push clear cart action. But this could be more user and performance friendly.
 
-The better option would be adding an option to Interaction Studio settings that would allow each business to configure (or not) the retention of the cart data so that it can be removed from the system automatically after some time.
+The better option would be adding an option to MCP settings that would allow each business to configure (or not) the retention of the cart data so that it can be removed from the system automatically after some time.
 
 <Button
     link='https://ideas.salesforce.com/s/idea/a0B8W00000OYz84UAD/abandoned-cart-retention-setting'
@@ -182,7 +183,7 @@ The better option would be adding an option to Interaction Studio settings that 
 
 The good part - only minimal work is needed, as the groundwork is already laid down. The trick is to leverage it by adding Experience ID and Experience Name columns to the ETL as fields for Email metadata.
 
-When you check the event stream for an outcome from that ETL, you will see it described as `Impression on experience Default in campaign {CAMPAIGN_NAME}`. What is more, the same event will already show (empty) properties `.etl_eeid` (ExternalExperienceID) and `.etl_een` (ExternalExperienceName) that are matching filled in `.etl_ecid` (ExternalCampaignID) and `.etl_ecn` (ExternalCampaignName). Finally, the segmentation is also ready for this extension, as the External Email Campaign ETL is leveraging the same Campaign Stat Count (or Recency) segmentation as Interaction Studio built-in campaigns, leveraging both Campaigns and Experiences.
+When you check the event stream for an outcome from that ETL, you will see it described as `Impression on experience Default in campaign {CAMPAIGN_NAME}`. What is more, the same event will already show (empty) properties `.etl_eeid` (ExternalExperienceID) and `.etl_een` (ExternalExperienceName) that are matching filled in `.etl_ecid` (ExternalCampaignID) and `.etl_ecn` (ExternalCampaignName). Finally, the segmentation is also ready for this extension, as the External Email Campaign ETL is leveraging the same Campaign Stat Count (or Recency) segmentation as Marketing Cloud Personalization (Interaction Studio) built-in campaigns, leveraging both Campaigns and Experiences.
 
 Currently, one has to choose whether to segment only on emails (without any connection to a specific campaign) or only campaigns (without any ties to specific emails within the campaigns). With that ETL change, we could build segments focusing either on whole Campaigns (f.e. SFMC Journeys) or only particular Emails in selected Journeys (f.e. the First email in Welcome Journey). Easy win for truly targeted Personalization!
 
@@ -222,9 +223,9 @@ Unsubscribe should be added to unlock a wide range of targeted campaigns like su
 
 ## Segmentation
 
-### IS Action Name Management
+### MCP Action Name Management
 
-Interaction Studio (MCP) captures actions from multiple sources to enable user segmentation and campaign targeting. Unfortunately, it does not offer any option to manage created actions, meaning everything that was pushed stays on the Dataset forever.
+Marketing Cloud Personalization (Interaction Studio) captures actions from multiple sources to enable user segmentation and campaign targeting. Unfortunately, it does not offer any option to manage created actions, meaning everything that was pushed stays on the Dataset forever.
 
 At the very least, there should be an option to view and remove existing Actions that are no longer needed (for example, test or refactored ones). It would significantly improve user experience by providing control over the number of options in the segmentation/targeting picklists.
 
@@ -232,7 +233,7 @@ Even better would be an option to merge existing actions so that we wouldn't los
 
 :::note You Should Know
 
-Partially implemented now - you can view and remove (but not merge or edit) actions by going in the Interaction Studio to Settings » Modules » Actions tab.
+Partially implemented now - you can view and remove (but not merge or edit) actions by going in the MCP to Settings » Modules » Actions tab.
 
 :::
 
@@ -242,9 +243,9 @@ Partially implemented now - you can view and remove (but not merge or edit) acti
     newTab='true'
 />
 
-### IS Hourly-based Segmentation Rules
+### MCP Hourly-based Segmentation Rules
 
-Currently segmentation rules in the Interaction Studio are based on number of days. This is very limiting for on-the-site campaign targeting.
+Currently segmentation rules in the Marketing Cloud Personalization (Interaction Studio)  are based on number of days. This is very limiting for on-the-site campaign targeting.
 
 For example, if we would like to display an infobar or slide-in for abandoned cart basket, current segemntation can only show us users that:
 
@@ -268,13 +269,13 @@ The best way to solve it would be to have additional picklist at the end of rule
 
 ## Reporting
 
-### Direct Attribution on IS / MCP Campaign level
+### Direct Attribution on MCP Campaign level
 
-Interaction Studio (Personalization) offers a wide selection of Reports based on Activity, Results and Visits. It lacks, however, clear and detailed reporting on direct attribution from specific campaigns.
+Marketing Cloud Personalization (Interaction Studio) offers a wide selection of Reports based on Activity, Results and Visits. It lacks, however, clear and detailed reporting on direct attribution from specific campaigns.
 
 Currently, attribution tracking is available in two places:
 
-1. The Main Dashboard (IS Home Page) displays the Total Stats and Revenue Dashboard at the top. It showcases direct revenue from campaigns (The User clicks a product recommendation and purchases that specific promoted item in the selected timeframe). Unfortunately, it does not offer per campaign (and per experience) data, only a global value split between all Web Recommendations and all Email Recommendations ([OTE](../../../docs/interaction-studio/is-open-time-email)).
+1. The Main Dashboard (MCP Home Page) displays the Total Stats and Revenue Dashboard at the top. It showcases direct revenue from campaigns (The User clicks a product recommendation and purchases that specific promoted item in the selected timeframe). Unfortunately, it does not offer per campaign (and per experience) data, only a global value split between all Web Recommendations and all Email Recommendations ([OTE](../../../docs/interaction-studio/mcp-open-time-email)).
 2. On the other hand, Specific Campaign Statistics display detailed statistics for each experience. Unfortunately, they don't offer direct attribution. While you can select whether the attribution should be based on click or view and what should be the attribution window, it is much more random data. View attribution means that if a user viewed a campaign and purchased anything (even wholly unrelated to the campaign recommendation) in the specified timeframe - it will be treated as revenue from that campaign. Similarly, click attribution means that if the user clicks on the campaign (for example, on a Laptop recommendation) and makes any purchase (for example, a new Monitor and cable), the whole revenue will still be attributed to the campaign. While it is acceptable for product-less campaigns (like Infobar) where direct attribution might not be possible, it's useless for meaningful analysis of recommendations conversion.
 
 There is no clean workaround for that problem - the Data Warehouse end of sales didn't help either. The only way right now is to append Campaign & Experience IDs to all links in the Campaigns and move the calculation to an external analytics system. That's a huge, complex work with a subpar experience of displaying reports in 3rd party solution, compared to having it directly in the system deploying those campaigns and tracking purchases - the system already calculating it for the existing total results.
