--- a/docs/interaction-studio/mcp-serverside-code-basics.mdx
+++ b/docs/interaction-studio/mcp-serverside-code-basics.mdx
@@ -2,36 +2,40 @@
 id: mcp-serverside-code-basics
 title: MCP Serverside Code Basics
 sidebar_label: Serverside Code Basics
-description: ""
+description: "Wrap your head around the core feature of Marketing Cloud Personalization (Interaction Studio) and build the bridge between marketer and customer."
 image: img/og/og-image-mcp-serverside-code-basics.png
 tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Personalisation, TypeScript]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
+import { Button } from '../../src/components/Buttons.js';
+import DocCardList from '@theme/DocCardList';
 import Image from '@theme/IdealImage';
 import purpose from '../../static/img/article/article-image-is-serverside-purpose.png';
 import templateUi from '../../static/img/article/article-image-is-serverside-template-ui.png';
 
-<LeadText content="" />
+<LeadText content= "Wrap your head around the core feature of Marketing Cloud Personalization (Interaction Studio) and build the bridge between marketer and customer."/>
 
 ## MCP Serverside Code Purpose
 
-Whether you are creating a Web, Serverside or Triggered Campaign Template in the Marketing Cloud Personalization (Interaction Studio), in each case you will start with the Serverside Code tab. It is true core of the platform responsible for delivering data-driven personalizations.
+Whether you are creating a Web, Serverside or Triggered Campaign Template in the Marketing Cloud Personalization (Interaction Studio), you start with the Serverside Code tab. It is the true heart of the MCP platform responsible for delivering data-driven personalisations.
 
-This is the place where the developer can:
+The developer can use the Serverside Code to:
 
-- leverage user profile and behavioral data
+- leverage user profile and behavioural data
 - lookup company catalog data
 - build campaign configuration and use provided data
 - select and pull Einstein Recipe recommendations
 
-to output transformed payload containing everything that is needed for a unique experience for each customer.
+to output a transformed payload containing everything needed for a unique experience for each customer.
 
 <Image img={purpose} alt='Graph displaying the purpose of Serverside code as a centre collecting data, configuration and recommendations to output personalisation payload'/>
 
+---
+
 ## MCP Serverside Code Basics
 
-All above things are done within Serverside Code tab of the MC Personalization Template creation UI with TypeScript programming language and built-in functions. Don't worry if you don't know TypeScript - basic knowledge of modern JavaScript is enough to create good templates.
+All the above things are done within the Serverside Code tab of the MC Personalization Template creation UI with TypeScript programming language and built-in functions. Don't worry if you don't know TypeScript - basic knowledge of modern JavaScript is enough to create good templates.
 
 :::note You Should Know
 
@@ -43,20 +47,20 @@ When you open the Serverside Code tab in a new Template creation screen for Web,
 
 <Image img={templateUi} alt='Marketing Cloud Personalization Serverside Template UI screenshot'/>
 
-1. The middle pane contains your whole TypeScript code responsible for all the magic happening on the serverside.
-2. Within the middle section (1) you will see two sections. First one is responsible for defining the Campaign configuration form. In the screenshot below you can see a `header` field being defined as a `string` and decorated with custom title.
-3. The form definitions you develop (2) will be available for a preview on the left pane. This section not only allows you to see how the Campaign Configuration screen will look like, but also try filling it in to see the interactions.
-4. Coming back to the middle section (1), below the configuration form definitions (2) you will find the `run` function with `context` being passed as an argument. This is part where you can optionally transform or enrich the data captured from the configuration form. The `context` provided to the function contains triggering event data as well as access to a lot of helper functions that can bring your template to the next level. You can also add additional properties (for example, debugging details) to the returned object to make them available in the payload (5).
-5. The bottom part of the right pane displays the Payload Preview. It is updated in real-time as you write your TypeScript (1) or change the configuration (3). it is great way to validate whether you are getting outcome you need.
-6. If your template leverages user or catalog data (for example, user attributes for personalisation or anchored recipes) to see the proper payload you will need to provide example data. Top section of the right pane lets you do it. You can provide the IDs and see the payload (5) adapt to simulated scenario.
+1. The middle pane contains your TypeScript code responsible for all the magic happening on the server side.
+2. Within the middle section (1), you will see two sections. The first one is responsible for defining the Campaign configuration form. In the screenshot above, a `header` field is defined as a `string` and decorated with a custom title.
+3. The form definitions you develop (2) will be available for a preview on the left pane. This section lets you see what the Campaign Configuration screen will look like and enables you to fill it in to see the interactions.
+4. Returning to the middle section (1), below the configuration form definitions (2), you will find the `run` function with `context` being passed as an argument. This is where you can optionally transform or enrich the data captured from the configuration form. The `context` provided to the function contains triggering event data and access to many helper functions to bring your template to the next level. You can also add properties (for example, debugging details) to the returned object to make them available in the payload (5).
+5. The bottom part of the right pane displays the Payload Preview. It is updated in real-time as you write your TypeScript (1) or change the configuration (3). it is an excellent way to validate whether you are getting the desired outcome.
+6. If your template leverages user or catalog data (for example, user attributes for personalisation or anchored recipes) to see the proper payload, you must provide example data. The top section of the right pane lets you do it. You can add the IDs and see the payload (5) adapt to the simulated scenario.
 
-The final outcome of your work in this tab is the personalised payload (5). Depending on the type of Campaign this template is for it will either be delivered as is (Serverside), put into a Data Extension (Triggered Campaign) or be available to leverage for logic in Clientside Code and experience in Handlebars tabs (Web Campaign).
+The final outcome of your work in this tab is the personalised payload (5). Depending on the type of campaign this template is for, it will either be delivered as is (Serverside), put into a Data Extension (Triggered Campaign) or be available to leverage for logic in Clientside Code and experience in Handlebars tabs (Web Campaign).
 
 :::note You Should Know
 
 If you don't see `experience` or `campaign` in the payload object (5), it means there is a bug in your template code (1).
 
-If you don't see the configuration form preview (3) updates despite making changes in the serverside code (1) it probably froze. Check whether you are still logged in to the MC Personalization (MCP session length is shorter to that of SFMC). If yes, cut (`ctrl`/`cmd` + `x`) your whole serverside code, provide any symbol (like `a`) to overwrite the cache and replace it back by pasting the code (`ctrl`/`cmd` + `v`).
+If you don't see the configuration form preview (3) updates despite making changes in the serverside code (1), MCP probably froze. Check whether you are still logged in to the MC Personalization (MCP session length is shorter than SFMC's). If yes, cut (`ctrl`/`cmd` + `x`) your whole serverside code, provide any symbol (like `a') to overwrite the cache and replace it back by pasting the code (`ctrl`/`cmd` + `v`).
 
 :::
 
@@ -64,7 +68,7 @@ If you don't see the configuration form preview (3) updates despite making chang
 
 ## Writing Serverside Code
 
-As mentioned above, when you create new Web, Serverside or Triggered Campaign Template and view the Serverside Code tab, you will get a very short and simple code snippet:
+As mentioned above, when you create a new Web, Serverside or Triggered Campaign Template and view the Serverside Code tab, you will get a concise and simple code snippet:
 
 ```ts
 export class NewTemplate implements CampaignTemplateComponent {
@@ -79,9 +83,9 @@ export class NewTemplate implements CampaignTemplateComponent {
 }
 ```
 
-There is a collection of much more complex [Global Templates available](https://github.com/evergage/evergage-global-templates/tree/master) that are great starting points for building real campaigns, but here we will start with the base snippet and build up from it for learning purposes.
+There is a collection of much more complex [Global Templates available](https://github.com/evergage/evergage-global-templates/tree/master) that are great starting points for building actual campaigns, but here we will start with the base snippet and build up from it for learning purposes.
 
-There are three key parts of that snippet:
+There are three critical parts of that snippet:
 
 ```ts {3-5,7-8,10}
 export class NewTemplate implements CampaignTemplateComponent {
@@ -98,23 +102,29 @@ export class NewTemplate implements CampaignTemplateComponent {
 }
 ```
 
-1. Field Configuration
+### 1. Field Configuration
 
-The field configuration let's you add properties that will become part of the campaign configuration form used by marketers to set the experiences. This is the main data input and all properties you set here will be passed directly to the campaign response.
+The field configuration lets you add properties that will become part of the campaign configuration form used by marketers to set the experiences. It is the primary data input; MCP will directly pass all properties you add here to the campaign response.
 
-2. Run Block
+<Button
+    link='../mcp-serverside-code-properties/'
+    text='Learn more'
+    newTab='true'
+/>
 
-Run block has access to the context - triggering event details and MC Personalization data. It can also pull information configured in the properties by the marketer. With all of this you can use it to enrich and transform the data that will be returned by the campaign.
+### 2. Run Block
 
-3. Return Statement
+Run block has access to the context object containing trigger event details and MC Personalization data. It can also pull information configured in the properties by the marketer. With all of this, you can use it to enrich and transform the data that the campaign will return.
 
-Return statement within the run block lets you add custom properties to the final campaign payload. Whatever you add to the returned object will be made available along with the properties from field configuration section.
+### 3. Return Statement
+
+Return statement within the run block lets you add custom properties to the final campaign payload. Whatever you add to the returned object will be available along with the properties from the field configuration section.
 
 :::note You Should Know
 
-Run block execution works differently during the template creation and in the campaign configuration. When marketer configures the campaign, the changes executed within the run section will be applied - this may lead to content changes or even removal of configuration parts. You shouldn't transform the data in the fields directly, but rather do it on new variables:
+The run block execution works differently during the template creation and campaign configuration. When the marketer configures the campaign, MCP applies the changes executed within the run in real time - this may lead to content changes or even the removal of field input. You shouldn't transform the data in the fields directly but rather do it on new variables:
 
-```ts {8,10} title="Transform field values using new variable"
+```ts {8,10} title= "Transform field values using the new variable"
 export class PersonalizedOverlay implements CampaignTemplateComponent {
 
     @title("Personalized Header")
@@ -129,26 +139,29 @@ export class PersonalizedOverlay implements CampaignTemplateComponent {
 }
 ```
 
-This way the configured field will stay as it is, but in the final campaign payload you will also have the transformed variable for use.
+This way, the configured field will stay as it is, but in the final campaign payload, you will also have the transformed variable for use.
 
-Keep this in mind when you have to provide a payload accoridng to a specification (f.e. in Serverside Campaign Tempalate). If you want to make any transformations to a manual input, add some prefix to the property in the field configuration section (f.e. `initial`) and output the expected name only through the return statement of the run block as shown in the snippet above.
+Keep this in mind when you have to provide a payload according to a specification (e.g. in the Serverside Campaign Template). If you want to make any transformations to a manual input, add some prefix to the property in the field configuration section (e.g. `initial`) and output the expected name only through the return statement of the run block, as shown in the snippet above.
 
 :::
 
-With the basics of how the Serverside Code processing works, let's talk how you can leverage it.
+With the basics of Serverside Code processing, you are ready to start coding. Next step - build MCP Campaign Template inputs with [Serverside Code Properties](../mcp-serverside-code-properties/).
 
 ---
 
+## All MCP Serverside Code Guides
 
+<DocCardList />
 
 ---
 
-## Examples
+## Learn more
 
-Here, I want to share a few of my favourite sources of MC Personalization Templates:
+Here, I want to share a few of my favourite sources focusing on MCP Serverside Code and its use in Campaign Templates:
 
-1. Official [GitHub repository](https://github.com/evergage/evergage-global-templates) with Global Templates
-2. Christoper's Long [GitHub repository](https://github.com/christopher-longSFDC/mcp/) with Complex Templates
-3. Salesforce Japan [Template Catalog](https://github.com/christopher-longSFDC/mcp/) with Web Campaigns
+1. My [MCP Campaign Templates and code snippets](../../category/mc-personalization-snippets/)
+2. Official [GitHub repository](https://github.com/evergage/evergage-global-templates/) with Global Templates
+3. Christoper's Long [GitHub repository](https://github.com/christopher-longSFDC/mcp/) with Complex Templates
+4. Salesforce Japan [Template Catalog](https://github.com/christopher-longSFDC/mcp/) with Web Campaigns
 
-Know other inspiring MCP Serverside Code examples? Let me know!
+Found other inspiring MCP Serverside Code examples? Let me know!
